--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
             <form class="login-form" [formGroup]="signInform" (ngSubmit)="submit(signInform)">
                 <div class="sign-in-htm">
                     <mat-form-field class="example-full-width w-100 mb-3 " appearance="outline">
-                        <mat-label class="input">Username</mat-label>
+                        <mat-label >Username</mat-label>
                         <input matInput id="user" formControlName="username" placeholder="Username"
                             style="font-size: medium;">
                         <span class="input-group-addon input">
