--- a/src/app/admin/features/special_role/Dialogue/addednotadded/addednotadded.component.scss
+++ b/src/app/admin/features/special_role/Dialogue/addednotadded/addednotadded.component.scss
@@ -74,9 +74,7 @@ h1 {
     border-radius: 0.25rem;
 }
 
-.example-box.selected {
-    background-color: #e861ec;
-}
+
 
 
 
@@ -108,28 +106,25 @@ h1 {
 // }
 
 .example-list {
+    width: 100%;
+    min-height: 100px;
     border: 1px solid #ccc;
-    min-height: 200px;
-    max-height: 300px;
-    // padding: 10px;
-    overflow-y: auto;
-    background-color: #f9f9f9;
+    background: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
 }
 
 .example-box {
     padding: 10px;
+    margin: 5px;
     border: 1px solid #ccc;
-    margin-bottom: 5px;
-    background-color: #fff;
+    background: #fff;
     cursor: move;
-    user-select: none;
 }
 
 .example-box.selected {
     background-color: #e861ec;
-}
-.example-box:last-child {
-    border: none;
 }
 
 .cdk-drag-preview {
@@ -148,13 +143,13 @@ h1 {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-    border: none;
-}
+// .example-box:last-child {
+//     border: none;
+// }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
+// .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+// }
 
 @media (max-width: 767.98px) {
     //     .d-flex {
@@ -191,10 +186,10 @@ h1 {
     //     display: flex !important;
     // }
 
-    .example-container {
-        max-height: 310px !important;
-        overflow: auto;
-    }
+    // .example-container {
+    //     max-height: 310px !important;
+    //     overflow: auto;
+    // }
 
     .card {
         height: 50vh;
