--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -37,6 +37,16 @@
                         <div><strong>Combo Package Report</strong></div>
                         <div class="tooltip">COMBO PACKAGE</div>
                     </div>
+                    <div class="card royal-card tooltip-container" (click)="openHistoryDialog(15)">
+                        <i class="fas fa-file-alt"></i>
+                        <div><strong>Channel Ageing</strong> </div>
+                        <div class="tooltip">CHANNEL AGEING </div>
+                    </div>
+                    <div class="card royal-card tooltip-container" (click)="openHistoryDialog(16)">
+                        <i class="fas fa-file-alt"></i>
+                        <div><strong> Package Ageing</strong> </div>
+                        <div class="tooltip">PACKAGE AGEING </div>
+                    </div>
                 </div>
 
             </mat-expansion-panel>
